<resources>
    <string name="app_name">AddendTrainer</string>
    <string name="button_submit">It\'s clear</string>
    <string name="rules">Game rules: there will be three figures in front of you, two below and one above, in two of them there will be numbers. It is necessary that the sum of the numbers from the two lower figures be equal to the number in the upper figure, for this you need to insert the missing number.  Example: in the top circle there is the number 7, in one of the lower ones there is a question mark, and in the other there is the number 4. This means that in place of the question mark there should be the number 3, because 3 + 4 = 7</string>
    <string name="rules_title">Addend trainer</string>
    <string name="button_level_test">test</string>
    <string name="button_level_easy">easy</string>
    <string name="button_level_normal">normal</string>
    <string name="button_level_hard">hard</string>
    <string name="level_title">Select level:</string>
    <string name="correct_answers">Correct answers count</string>
    <string name="minimum">Minimum</string>
    <string name="button_retry">Try again</string>
    <string name="min_quantity">Required number of correct answers: %s</string>
    <string name="your_score">Your score: %s</string>
    <string name="min_percentage">Required percentage of correct answers: %s</string>
    <string name="percentage">Percentage of correct answers: %s</string>
    <string name="progress_answers">Correct answers %s (minimum %s)</string>
    <string name="question" translatable="false">\?</string>
</resources>